change login to full screen

--- a/login_page.html
+++ b/login_page.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <main class="container-fluid container-md">
+    <main class="w-100">
         <section class="login d-flex">
             <div class="login__left overflow-hidden d-flex justify-content-center align-items-center">
                 <div class="login__left-content">
@@ -24,7 +24,7 @@
                     </p>
                     <h1 class="bold mb-2">Zaloguj się do swojego konta</h1>
                     <p class="text-secondary fs-4">Witamy ponownie wpisz dane do logowania</p>
-                    <img class="login__waves" src="./dist/img/waves.svg" alt="">
+                    <img class="login__waves d-none d-lg-block" src="./dist/img/waves.svg" alt="">
                     <form class="mt-5">
                         <div class="mb-4">
                             <input type="email" class="form-control py-4 px-4" id="email" aria-describedby="emailHelp"
