--- a/login_page.html
+++ b/login_page.html
@@ -55,14 +55,16 @@
                 </div>
             </div>
             <div class="login__right bg-primary d-none d-lg-block">
-                <img src="./dist/img/login_right.svg" alt="">
+                <img src="./dist/img/login_right.png" alt="">
             </div>
         </section>
     </main>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<script src="main.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+<script src="./dist/js/main.min.js"></script>
 </body>
 
 </html>
