--- a/screen1.html
+++ b/screen1.html
@@ -25,9 +25,12 @@
         <span class="btn-name">Wirtualna maszyna</span>
     </div>
     <div class="menu-btn">
-        <button class="functional-btn"><img src="./dist/img/icon2.svg" alt=""></button>
-        <span class="btn-name">IBM Blokowe Systemy Pamięci
-            Masowej</span>
+        <a href="" class="functional-btn">
+            <button class="functional-btn"><img src="./dist/img/icon2.svg" alt=""></button>
+            <p class="btn-name">IBM Blokowe Systemy Pamięci
+                Masowej</p>
+        </a>
+
     </div>
     <div class="menu-btn">
         <button class="functional-btn"><img src="./dist/img/icon3.svg" alt=""></button>
@@ -103,7 +106,7 @@
     </div>
 </header>
     <main>
-        <div class="container mt-5">
+        <div class="container main-section">
             <h1 class="mb-5">
                 <img src="./dist/img/pc.svg" alt=""> Wirtualna maszyna <span
                     class="bg-primary-subtle py-1 px-3 rounded-3">:hostname</span>
