--- a/screen1.html
+++ b/screen1.html
@@ -16,72 +16,71 @@
 
 <body>
     <nav class="nav-left d-flex justify-content-start flex-column gap-1 rounded-3 bg-primary">
-    <div class="menu-btn">
+    <img class="panel-waves" src="./dist/img/panel-waves.svg" alt="">
+    <a href="#" class="menu-btn functional-btn functional-btn-link">
         <button class="switch-btn"><img src="./dist/img/arrow.svg" alt=""></button>
-        <span class="btn-name">Zwiń</span>
-    </div>
-    <div class="menu-btn">
+        <p class="btn-name mb-0">Zwiń</p>
+    </a>
+    <a href="#" class="menu-btn functional-btn functional-btn-link">
         <button class="functional-btn"><img src="./dist/img/icon1.svg" alt=""></button>
-        <span class="btn-name">Wirtualna maszyna</span>
-    </div>
-    <div class="menu-btn">
-        <a href="" class="functional-btn">
-            <button class="functional-btn"><img src="./dist/img/icon2.svg" alt=""></button>
-            <p class="btn-name">IBM Blokowe Systemy Pamięci
-                Masowej</p>
-        </a>
-
-    </div>
-    <div class="menu-btn">
+        <p class="btn-name mb-0">Wirtualna maszyna</p>
+    </a>
+    <a href="#" class="menu-btn functional-btn functional-btn-link">
+        <button class="functional-btn"><img src="./dist/img/icon2.svg" alt=""></button>
+        <p class="btn-name mb-0">IBM Blokowe Systemy Pamięci
+            Masowej
+        </p>
+    </a>
+    <a href="#" class="menu-btn functional-btn functional-btn-link">
         <button class="functional-btn"><img src="./dist/img/icon3.svg" alt=""></button>
-        <span class="btn-name text-nowrap">Opcja #1</span>
-    </div>
-    <div class="menu-btn">
+        <p class="btn-name mb-0">Opcja #1</p>
+    </a>
+    <a href="#" class="menu-btn functional-btn functional-btn-link">
         <button class="functional-btn"><img src="./dist/img/icon4.svg" alt=""></button>
-        <span class="btn-name">Data centers</span>
-    </div>
-    <div class="menu-btn">
+        <p class="btn-name mb-0">Data centers</p>
+    </a>
+    <a href="#" class="menu-btn functional-btn functional-btn-link">
         <button class="functional-btn"><img src="./dist/img/icon5.svg" alt=""></button>
-        <span class="btn-name">VC Voluminy</span>
-    </div>
-    <div class="menu-btn">
+        <p class="btn-name mb-0">VC Voluminy</p>
+    </a>
+    <a href="#" class="menu-btn functional-btn functional-btn-link">
         <button class="functional-btn"><img src="./dist/img/icon6.svg" alt=""></button>
-        <span class="btn-name">VC Datastores</span>
-    </div>
-    <div class="menu-btn">
+        <p class="btn-name mb-0">VC Datastores</p>
+    </a>
+    <a href="#" class="menu-btn functional-btn functional-btn-link">
         <button class="functional-btn"><img src="./dist/img/icon7.svg" alt=""></button>
-        <span class="btn-name">VC Snapshots</span>
-    </div>
-    <div class="menu-btn">
+        <p class="btn-name mb-0">VC Snapshots</p>
+    </a>
+    <a href="#" class="menu-btn functional-btn functional-btn-link">
         <button class="functional-btn"><img src="./dist/img/icon8.svg" alt=""></button>
-        <span class="btn-name">Opcja #3</span>
-    </div>
-    <div class="menu-btn">
+        <p class="btn-name mb-0">Opcja #3</p>
+    </a>
+    <a href="#" class="menu-btn functional-btn functional-btn-link">
         <button class="functional-btn"><img src="./dist/img/icon9.svg" alt=""></button>
-        <span class="btn-name">Opcja #3</span>
-    </div>
-    <div class="menu-btn">
+        <p class="btn-name mb-0">Opcja #3</p>
+    </a>
+    <a href="#" class="menu-btn functional-btn functional-btn-link">
         <button class="functional-btn">
             <img src="./dist/img/icon10.svg" alt="">
         </button>
-        <span class="btn-name">Programy narzędziowe</span>
-    </div>
-    <div class="menu-btn">
+        <p class="btn-name mb-0">Programy narzędziowe</p>
+    </a>
+    <a href="#" class="menu-btn functional-btn functional-btn-link">
         <button class="functional-btn"><img src="./dist/img/icon11.svg" alt=""></button>
-        <span class="btn-name">Backups</span>
-    </div>
-    <div class="menu-btn">
+        <p class="btn-name mb-0">Backups</p>
+    </a>
+    <a href="#" class="menu-btn functional-btn functional-btn-link">
         <button class="functional-btn"><img src="./dist/img/icon12.svg" alt=""></button>
-        <span class="btn-name">DataHub Agent Logi</span>
-    </div>
-    <div class="menu-btn">
+        <p class="btn-name mb-0">DataHub Agent Logi</p>
+    </a>
+    <a href="#" class="menu-btn functional-btn functional-btn-link">
         <button class="functional-btn"><img src="./dist/img/icon13.svg" alt=""></button>
-        <span class="btn-name">DataHub Agent Logi ( via API )</span>
-    </div>
-    <div class="menu-btn mt-auto">
+        <p class="btn-name mb-0">DataHub Agent Logi ( via API )</p>
+    </a>
+    <a href="#" class="menu-btn functional-btn functional-btn-link mt-auto">
         <button class="logOut-btn"><img src="./dist/img/log_out.svg" alt=""></button>
-        <span class="btn-name">Wyloguj się</span>
-    </div>
+        <p class="btn-name mb-0">Wyloguj się</p>
+    </a>
 </nav>
     <header class="nav-top px-5 d-flex align-items-center justify-content-between rounded-3 bg-primary">
     <div class="nav-top__left d-flex align-items-center gap-4">
@@ -171,15 +170,21 @@
                             </h3>
                             <ul class="list-unstyled">
                                 <li class="custom-list-item my-5">
-                                    <img class="me-2" src="./dist/img/dot.svg" alt="">
+                                    <div>
+                                        <input class="form-check-input me-4 bg-warning border border-0" type="checkbox" id="checkboxNoLabel" value="" aria-label="checkbox" >
+                                      </div>
                                     py00 (Inicjator procesu DIM Agenta)
                                 </li>
                                 <li class="custom-list-item my-5">
-                                    <img class="me-2" src="./dist/img/dot.svg" alt="">
+                                    <div>
+                                        <input class="form-check-input me-4 bg-warning border border-0" type="checkbox" id="checkboxNoLabel" value="" aria-label="checkbox" >
+                                      </div>
                                     py01 (Worker skanujący certyfikaty)
                                 </li>
                                 <li class="custom-list-item my-5">
-                                    <img class="me-2" src="./dist/img/dot.svg" alt="">
+                                    <div>
+                                        <input class="form-check-input me-4 bg-warning border border-0" type="checkbox" id="checkboxNoLabel" value="" aria-label="checkbox" >
+                                      </div>
                                     py11 (Worker skanujący narzędzia
                                     systemowe)
                                 </li>
