--- a/screen2.html
+++ b/screen2.html
@@ -16,72 +16,71 @@
 
 <body>
     <nav class="nav-left d-flex justify-content-start flex-column gap-1 rounded-3 bg-primary">
-    <div class="menu-btn">
+    <img class="panel-waves" src="./dist/img/panel-waves.svg" alt="">
+    <a href="#" class="menu-btn functional-btn functional-btn-link">
         <button class="switch-btn"><img src="./dist/img/arrow.svg" alt=""></button>
-        <span class="btn-name">Zwiń</span>
-    </div>
-    <div class="menu-btn">
+        <p class="btn-name mb-0">Zwiń</p>
+    </a>
+    <a href="#" class="menu-btn functional-btn functional-btn-link">
         <button class="functional-btn"><img src="./dist/img/icon1.svg" alt=""></button>
-        <span class="btn-name">Wirtualna maszyna</span>
-    </div>
-    <div class="menu-btn">
-        <a href="" class="functional-btn">
-            <button class="functional-btn"><img src="./dist/img/icon2.svg" alt=""></button>
-            <p class="btn-name">IBM Blokowe Systemy Pamięci
-                Masowej</p>
-        </a>
-
-    </div>
-    <div class="menu-btn">
+        <p class="btn-name mb-0">Wirtualna maszyna</p>
+    </a>
+    <a href="#" class="menu-btn functional-btn functional-btn-link">
+        <button class="functional-btn"><img src="./dist/img/icon2.svg" alt=""></button>
+        <p class="btn-name mb-0">IBM Blokowe Systemy Pamięci
+            Masowej
+        </p>
+    </a>
+    <a href="#" class="menu-btn functional-btn functional-btn-link">
         <button class="functional-btn"><img src="./dist/img/icon3.svg" alt=""></button>
-        <span class="btn-name text-nowrap">Opcja #1</span>
-    </div>
-    <div class="menu-btn">
+        <p class="btn-name mb-0">Opcja #1</p>
+    </a>
+    <a href="#" class="menu-btn functional-btn functional-btn-link">
         <button class="functional-btn"><img src="./dist/img/icon4.svg" alt=""></button>
-        <span class="btn-name">Data centers</span>
-    </div>
-    <div class="menu-btn">
+        <p class="btn-name mb-0">Data centers</p>
+    </a>
+    <a href="#" class="menu-btn functional-btn functional-btn-link">
         <button class="functional-btn"><img src="./dist/img/icon5.svg" alt=""></button>
-        <span class="btn-name">VC Voluminy</span>
-    </div>
-    <div class="menu-btn">
+        <p class="btn-name mb-0">VC Voluminy</p>
+    </a>
+    <a href="#" class="menu-btn functional-btn functional-btn-link">
         <button class="functional-btn"><img src="./dist/img/icon6.svg" alt=""></button>
-        <span class="btn-name">VC Datastores</span>
-    </div>
-    <div class="menu-btn">
+        <p class="btn-name mb-0">VC Datastores</p>
+    </a>
+    <a href="#" class="menu-btn functional-btn functional-btn-link">
         <button class="functional-btn"><img src="./dist/img/icon7.svg" alt=""></button>
-        <span class="btn-name">VC Snapshots</span>
-    </div>
-    <div class="menu-btn">
+        <p class="btn-name mb-0">VC Snapshots</p>
+    </a>
+    <a href="#" class="menu-btn functional-btn functional-btn-link">
         <button class="functional-btn"><img src="./dist/img/icon8.svg" alt=""></button>
-        <span class="btn-name">Opcja #3</span>
-    </div>
-    <div class="menu-btn">
+        <p class="btn-name mb-0">Opcja #3</p>
+    </a>
+    <a href="#" class="menu-btn functional-btn functional-btn-link">
         <button class="functional-btn"><img src="./dist/img/icon9.svg" alt=""></button>
-        <span class="btn-name">Opcja #3</span>
-    </div>
-    <div class="menu-btn">
+        <p class="btn-name mb-0">Opcja #3</p>
+    </a>
+    <a href="#" class="menu-btn functional-btn functional-btn-link">
         <button class="functional-btn">
             <img src="./dist/img/icon10.svg" alt="">
         </button>
-        <span class="btn-name">Programy narzędziowe</span>
-    </div>
-    <div class="menu-btn">
+        <p class="btn-name mb-0">Programy narzędziowe</p>
+    </a>
+    <a href="#" class="menu-btn functional-btn functional-btn-link">
         <button class="functional-btn"><img src="./dist/img/icon11.svg" alt=""></button>
-        <span class="btn-name">Backups</span>
-    </div>
-    <div class="menu-btn">
+        <p class="btn-name mb-0">Backups</p>
+    </a>
+    <a href="#" class="menu-btn functional-btn functional-btn-link">
         <button class="functional-btn"><img src="./dist/img/icon12.svg" alt=""></button>
-        <span class="btn-name">DataHub Agent Logi</span>
-    </div>
-    <div class="menu-btn">
+        <p class="btn-name mb-0">DataHub Agent Logi</p>
+    </a>
+    <a href="#" class="menu-btn functional-btn functional-btn-link">
         <button class="functional-btn"><img src="./dist/img/icon13.svg" alt=""></button>
-        <span class="btn-name">DataHub Agent Logi ( via API )</span>
-    </div>
-    <div class="menu-btn mt-auto">
+        <p class="btn-name mb-0">DataHub Agent Logi ( via API )</p>
+    </a>
+    <a href="#" class="menu-btn functional-btn functional-btn-link mt-auto">
         <button class="logOut-btn"><img src="./dist/img/log_out.svg" alt=""></button>
-        <span class="btn-name">Wyloguj się</span>
-    </div>
+        <p class="btn-name mb-0">Wyloguj się</p>
+    </a>
 </nav>
     <header class="nav-top px-5 d-flex align-items-center justify-content-between rounded-3 bg-primary">
     <div class="nav-top__left d-flex align-items-center gap-4">
@@ -116,7 +115,6 @@
                         </li>
                     </ol>
                 </nav>
-
             </h1>
             <div class="bg-warning-subtle py-4 px-5">
                 <div class="d-flex align-items-center justify-content-between gap-3">
@@ -148,13 +146,15 @@
                                         <img src="./dist/img/panel-arrow.svg" alt="">
                                     </button>
                                     <ul class="dropdown-menu w-100 fs-5 border-0">
-                                        <li><a class="dropdown-item" href="#">Action</a></li>
-                                        <li><a class="dropdown-item" href="#">Action</a></li>
-                                        <li><a class="dropdown-item" href="#">Action</a></li>
-                                        <li><a class="dropdown-item" href="#">Action</a></li>
-                                        <li><a class="dropdown-item" href="#">Action</a></li>
-                                        <li><a class="dropdown-item" href="#">Action</a></li>
-                                        <li><a class="dropdown-item" href="#">Action</a></li>
+                                        <li><a class="dropdown-item" href="#">Zaczyna się od</a></li>
+                                        <li><a class="dropdown-item" href="#">Nie zaczyna się od</a></li>
+                                        <li><a class="dropdown-item" href="#">Równa się</a></li>
+                                        <li><a class="dropdown-item" href="#">Zawiera</a></li>
+                                        <li><a class="dropdown-item" href="#">Nie Zawiera</a></li>
+                                        <li><a class="dropdown-item" href="#">Kończy się na</a></li>
+                                        <li><a class="dropdown-item" href="#">Nie kończy się na</a></li>
+                                        <li><a class="dropdown-item" href="#">Pusty</a></li>
+                                        <li><a class="dropdown-item" href="#">Nie pusty</a></li>
                                     </ul>
                                 </div>
                             </li>
@@ -165,11 +165,13 @@
                             </li>
                             <li>
                                 <button class=" py-3 px-3 drop-btn--green text-white rounded-3 fs-5">
-                                   Dodaj warunek
+                                    <img src="./dist/img/accept.svg" alt="">
+                                    Dodaj warunek
                                 </button>
                             </li>
                             <li>
                                 <button class=" py-3 px-3 drop-btn--red text-white rounded-3 fs-5">
+                                    <img src="./dist/img/cancel.svg" alt="">
                                     Usuń warunek
                                 </button>
                             </li>
