--- a/screen3.html
+++ b/screen3.html
@@ -105,7 +105,7 @@
     </div>
 </header>
     <main>
-        <div class="container main-section">
+        <div class="main-section">
             <h1 class="mb-5">
                 <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
                     <ol class="breadcrumb d-flex align-items-center">
@@ -217,11 +217,11 @@
                     </div>
                     <div class="d-flex gap-3">
                         <div class="col-md-6">
-                            <button class="col-btn3 mt-3 py-4 px-4 rounded-3 text-white border-0"
+                            <button class="w-100 mt-3 py-4 px-4 rounded-3 text-white border-0"
                                 style="background-color: #569090;">Aktualizuj wirtualną maszynę</button>
                         </div>
                         <div class="col-md-6">
-                            <button class="col-btn3 mt-3 py-4 px-4 rounded-3 border-0"
+                            <button class="w-100 mt-3 py-4 px-4 rounded-3 border-0"
                                 style="background-color: #F3F4F6; color: #6B7280;">Anuluj</button>
                         </div>
                     </div>
