--- a/screen3.html
+++ b/screen3.html
@@ -17,68 +17,68 @@
 <body>
     <nav class="nav-left d-flex justify-content-start flex-column gap-1 rounded-3 bg-primary">
     <img class="panel-waves" src="./dist/img/panel-waves.svg" alt="">
-    <a href="#" class="menu-btn functional-btn functional-btn-link">
-        <button class="switch-btn"><img src="./dist/img/arrow.svg" alt=""></button>
+    <a href="#" class="menu-btn functional-btn functional-btn-link switch-btn">
+        <button><img class="arrow" src="./dist/img/arrow.svg" alt=""></button>
         <p class="btn-name mb-0">Zwiń</p>
     </a>
-    <a href="#" class="menu-btn functional-btn functional-btn-link">
-        <button class="functional-btn"><img src="./dist/img/icon1.svg" alt=""></button>
+    <a href="#" class="menu-btn functional-btn functional-btn-link" onclick="setActive(this)">
+        <button><img src="./dist/img/icon1.svg" alt=""></button>
         <p class="btn-name mb-0">Wirtualna maszyna</p>
     </a>
-    <a href="#" class="menu-btn functional-btn functional-btn-link">
-        <button class="functional-btn"><img src="./dist/img/icon2.svg" alt=""></button>
+    <a href="#" class="menu-btn functional-btn functional-btn-link" onclick="setActive(this)">
+        <button><img src="./dist/img/icon2.svg" alt=""></button>
         <p class="btn-name mb-0">IBM Blokowe Systemy Pamięci
             Masowej
         </p>
     </a>
-    <a href="#" class="menu-btn functional-btn functional-btn-link">
-        <button class="functional-btn"><img src="./dist/img/icon3.svg" alt=""></button>
+    <a href="#" class="menu-btn functional-btn functional-btn-link" onclick="setActive(this)">
+        <button><img src="./dist/img/icon3.svg" alt=""></button>
         <p class="btn-name mb-0">Opcja #1</p>
     </a>
-    <a href="#" class="menu-btn functional-btn functional-btn-link">
-        <button class="functional-btn"><img src="./dist/img/icon4.svg" alt=""></button>
+    <a href="#" class="menu-btn functional-btn functional-btn-link" onclick="setActive(this)">
+        <button><img src="./dist/img/icon4.svg" alt=""></button>
         <p class="btn-name mb-0">Data centers</p>
     </a>
-    <a href="#" class="menu-btn functional-btn functional-btn-link">
-        <button class="functional-btn"><img src="./dist/img/icon5.svg" alt=""></button>
+    <a href="#" class="menu-btn functional-btn functional-btn-link" onclick="setActive(this)">
+        <button><img src="./dist/img/icon5.svg" alt=""></button>
         <p class="btn-name mb-0">VC Voluminy</p>
     </a>
-    <a href="#" class="menu-btn functional-btn functional-btn-link">
-        <button class="functional-btn"><img src="./dist/img/icon6.svg" alt=""></button>
+    <a href="#" class="menu-btn functional-btn functional-btn-link" onclick="setActive(this)">
+        <button><img src="./dist/img/icon6.svg" alt=""></button>
         <p class="btn-name mb-0">VC Datastores</p>
     </a>
-    <a href="#" class="menu-btn functional-btn functional-btn-link">
-        <button class="functional-btn"><img src="./dist/img/icon7.svg" alt=""></button>
+    <a href="#" class="menu-btn functional-btn functional-btn-link" onclick="setActive(this)">
+        <button><img src="./dist/img/icon7.svg" alt=""></button>
         <p class="btn-name mb-0">VC Snapshots</p>
     </a>
-    <a href="#" class="menu-btn functional-btn functional-btn-link">
-        <button class="functional-btn"><img src="./dist/img/icon8.svg" alt=""></button>
+    <a href="#" class="menu-btn functional-btn functional-btn-link" onclick="setActive(this)">
+        <button><img src="./dist/img/icon8.svg" alt=""></button>
         <p class="btn-name mb-0">Opcja #3</p>
     </a>
-    <a href="#" class="menu-btn functional-btn functional-btn-link">
-        <button class="functional-btn"><img src="./dist/img/icon9.svg" alt=""></button>
+    <a href="#" class="menu-btn functional-btn functional-btn-link" onclick="setActive(this)">
+        <button><img src="./dist/img/icon9.svg" alt=""></button>
         <p class="btn-name mb-0">Opcja #3</p>
     </a>
-    <a href="#" class="menu-btn functional-btn functional-btn-link">
-        <button class="functional-btn">
+    <a href="#" class="menu-btn functional-btn functional-btn-link" onclick="setActive(this)">
+        <button>
             <img src="./dist/img/icon10.svg" alt="">
         </button>
         <p class="btn-name mb-0">Programy narzędziowe</p>
     </a>
-    <a href="#" class="menu-btn functional-btn functional-btn-link">
-        <button class="functional-btn"><img src="./dist/img/icon11.svg" alt=""></button>
+    <a href="#" class="menu-btn functional-btn functional-btn-link" onclick="setActive(this)">
+        <button><img src="./dist/img/icon11.svg" alt=""></button>
         <p class="btn-name mb-0">Backups</p>
     </a>
-    <a href="#" class="menu-btn functional-btn functional-btn-link">
-        <button class="functional-btn"><img src="./dist/img/icon12.svg" alt=""></button>
+    <a href="#" class="menu-btn functional-btn functional-btn-link" onclick="setActive(this)">
+        <button><img src="./dist/img/icon12.svg" alt=""></button>
         <p class="btn-name mb-0">DataHub Agent Logi</p>
     </a>
-    <a href="#" class="menu-btn functional-btn functional-btn-link">
-        <button class="functional-btn"><img src="./dist/img/icon13.svg" alt=""></button>
+    <a href="#" class="menu-btn functional-btn functional-btn-link" onclick="setActive(this)">
+        <button><img src="./dist/img/icon13.svg" alt=""></button>
         <p class="btn-name mb-0">DataHub Agent Logi ( via API )</p>
     </a>
     <a href="#" class="menu-btn functional-btn functional-btn-link mt-auto">
-        <button class="logOut-btn"><img src="./dist/img/log_out.svg" alt=""></button>
+        <button><img src="./dist/img/log_out.svg" alt=""></button>
         <p class="btn-name mb-0">Wyloguj się</p>
     </a>
 </nav>
