--- a/login_page.html
+++ b/login_page.html
@@ -40,10 +40,10 @@
                             <input type="password" class="form-control" id="password" placeholder="Hasło">
                         </div>
                         <div class="d-flex justify-content-between mt-5">
-                            <div class="mb-4 form-check d-flex align-items-center gap-2">
-                                <input type="checkbox" class="form-check-input" id="staySign">
-                                <label class="form-check-label fs-4" for="exampleCheck1"><span class="">Zapamiętaj
-                                        mnie</span></label>
+                            <div class="mb-4 form-check d-flex align-items-center gap-3">
+                                <input type="checkbox" id="customCheckbox">
+                                <label class="customCheckbox" for="customCheckbox"></label>
+                                <span class="">Zapamiętaj mnie</span>
                             </div>
                             <div>
                                 <a href="#" class="text-primary bold fs-4">Przypomnij hasło</a>
