fix checkbox id

--- a/login_page.html
+++ b/login_page.html
@@ -41,8 +41,8 @@
                         </div>
                         <div class="d-flex justify-content-between mt-5">
                             <div class="mb-4 form-check d-flex align-items-center gap-3">
-                                <input type="checkbox" id="customCheckbox">
-                                <label class="customCheckbox" for="customCheckbox"></label>
+                                <input type="checkbox" id="rememberMe">
+                                <label class="customCheckbox" for="rememberMe"></label>
                                 <span class="">Zapamiętaj mnie</span>
                             </div>
                             <div>
