fix checkbox panel

--- a/screen1.html
+++ b/screen1.html
@@ -161,7 +161,7 @@
                 <div class="d-flex flex-column align-items-start w-auto gap-5">
                     <div class="d-flex align-items-center gap-3">
                         <span>
-                            <input type="checkbox" id="anomaliaRaport">
+                            <input class="input-check" type="checkbox" id="anomaliaRaport">
                             <label class="customCheckbox" for="anomaliaRaport"></label>
                         </span>
                         <span class="text-nowrap mb-2">
@@ -178,7 +178,7 @@
                                 <li class="custom-list-item my-5">
                                     <div class="d-flex align-items-center gap-3">
                                         <span>
-                                            <input type="checkbox" id="py00">
+                                            <input class="input-check" type="checkbox" id="py00">
                                             <label class="customCheckbox customCheckbox--orange" for="py00"></label>
                                         </span>
                                         <span class="text-nowrap mb-2">
@@ -189,7 +189,7 @@
                                 <li class="custom-list-item my-5">
                                     <div class="d-flex align-items-center gap-3">
                                         <span>
-                                            <input type="checkbox" id="py01">
+                                            <input class="input-check" type="checkbox" id="py01">
                                             <label class="customCheckbox customCheckbox--orange" for="py01"></label>
                                         </span>
                                         <span class="text-nowrap mb-2">
@@ -200,7 +200,7 @@
                                 <li class="custom-list-item my-5">
                                     <div class="d-flex align-items-center gap-3">
                                         <span>
-                                            <input type="checkbox" id="py11">
+                                            <input class="input-check" type="checkbox" id="py11">
                                             <label class="customCheckbox customCheckbox--orange" for="py11"></label>
                                         </span>
                                         <span class="text-nowrap mb-2">
@@ -213,7 +213,7 @@
                     </div>
                     <div class="d-flex align-items-center gap-3">
                         <span>
-                            <input type="checkbox" id="checkboxPy00-force-restart">
+                            <input class="input-check" type="checkbox" id="checkboxPy00-force-restart">
                             <label class="customCheckbox" for="checkboxPy00-force-restart"></label>
                         </span>
                         <span class="text-nowrap mb-2">
