--- a/screen3.html
+++ b/screen3.html
@@ -230,7 +230,7 @@
                 <div class="d-flex flex-column align-items-start w-auto gap-5">
                     <div class="d-flex align-items-center gap-3">
                         <span>
-                            <input type="checkbox" id="raportoff">
+                            <input class="input-check" type="checkbox" id="raportoff">
                             <label class="customCheckbox" for="raportoff"></label>
                         </span>
                         <span class="text-nowrap mb-2">
@@ -247,7 +247,7 @@
                                 <li class="custom-list-item my-5">
                                     <div class="d-flex align-items-center gap-3">
                                         <span>
-                                            <input type="checkbox" id="py00-2">
+                                            <input class="input-check" type="checkbox" id="py00-2">
                                             <label class="customCheckbox customCheckbox--orange" for="py00-2"></label>
                                         </span>
                                         <span class="text-nowrap mb-2">
@@ -258,7 +258,7 @@
                                 <li class="custom-list-item my-5">
                                     <div class="d-flex align-items-center gap-3">
                                         <span>
-                                            <input type="checkbox" id="py01-2">
+                                            <input class="input-check" type="checkbox" id="py01-2">
                                             <label class="customCheckbox customCheckbox--orange" for="py01-2"></label>
                                         </span>
                                         <span class="text-nowrap mb-2">
@@ -269,7 +269,7 @@
                                 <li class="custom-list-item my-5">
                                     <div class="d-flex align-items-center gap-3">
                                         <span>
-                                            <input type="checkbox" id="py02">
+                                            <input class="input-check" type="checkbox" id="py02">
                                             <label class="customCheckbox customCheckbox--orange" for="py02"></label>
                                         </span>
                                         <span class="text-nowrap mb-2">
@@ -280,7 +280,7 @@
                                 <li class="custom-list-item my-5">
                                     <div class="d-flex align-items-center gap-3">
                                         <span>
-                                            <input type="checkbox" id="py11-2">
+                                            <input class="input-check" type="checkbox" id="py11-2">
                                             <label class="customCheckbox customCheckbox--orange" for="py11-2"></label>
                                         </span>
                                         <span class="text-nowrap mb-2">
@@ -291,7 +291,7 @@
                                 <li class="custom-list-item my-5">
                                     <div class="d-flex align-items-center gap-3">
                                         <span>
-                                            <input type="checkbox" id="py21">
+                                            <input class="input-check" type="checkbox" id="py21">
                                             <label class="customCheckbox customCheckbox--orange" for="py21"></label>
                                         </span>
                                         <span class="text-nowrap mb-2">
@@ -302,7 +302,7 @@
                                 <li class="custom-list-item my-5">
                                     <div class="d-flex align-items-center gap-3">
                                         <span>
-                                            <input type="checkbox" id="py31">
+                                            <input class="input-check" type="checkbox" id="py31">
                                             <label class="customCheckbox customCheckbox--orange" for="py31"></label>
                                         </span>
                                         <span class="text-nowrap mb-2">
@@ -313,7 +313,7 @@
                                 <li class="custom-list-item my-5">
                                     <div class="d-flex align-items-center gap-3">
                                         <span>
-                                            <input type="checkbox" id="py61">
+                                            <input class="input-check" type="checkbox" id="py61">
                                             <label class="customCheckbox customCheckbox--orange" for="py61"></label>
                                         </span>
                                         <span class="text-nowrap mb-2">
@@ -324,7 +324,7 @@
                                 <li class="custom-list-item my-5">
                                     <div class="d-flex align-items-center gap-3">
                                         <span>
-                                            <input type="checkbox" id="py81">
+                                            <input class="input-check" type="checkbox" id="py81">
                                             <label class="customCheckbox customCheckbox--orange" for="py81"></label>
                                         </span>
                                         <span class="text-nowrap mb-2">
