--- a/login_page.html
+++ b/login_page.html
@@ -39,8 +39,8 @@
                                     alt=""></button>
                             <input type="password" class="form-control" id="password" placeholder="Hasło">
                         </div>
-                        <div class="d-flex justify-content-between mt-5">
-                            <div class="mb-4 form-check d-flex align-items-center gap-3">
+                        <div class="login-check d-flex justify-content-between mt-5 mb-5">
+                            <div class=" form-check d-flex align-items-center gap-3">
                                 <input type="checkbox" id="rememberMe">
                                 <label class="customCheckbox" for="rememberMe"></label>
                                 <span class="">Zapamiętaj mnie</span>
