fix checkbox login

--- a/login_page.html
+++ b/login_page.html
@@ -41,7 +41,7 @@
                         </div>
                         <div class="login-check d-flex justify-content-between mt-5 mb-5">
                             <div class=" form-check d-flex align-items-center gap-3">
-                                <input type="checkbox" id="rememberMe">
+                                <input class="input-check" type="checkbox" id="rememberMe">
                                 <label class="customCheckbox" for="rememberMe"></label>
                                 <span class="">Zapamiętaj mnie</span>
                             </div>
