fix checkbox panel

--- a/screen1.html
+++ b/screen1.html
@@ -107,8 +107,8 @@
     <main>
         <div class="main-section">
             <h1 class="mb-5">
-                <img src="./dist/img/pc.svg" alt=""> Wirtualna maszyna <span
-                    class="bg-primary-subtle py-1 px-3 rounded-3">:hostname</span>
+                <img src="./dist/img/pc.svg" alt=""> Wirtualna maszyna <span class="py-1 px-3 rounded-3"
+                    style="color: #3B82F6; background-color:#DBEAFE ;">:hostname</span>
             </h1>
             <div class="d-flex gap-5 flex-nowrap w-100">
                 <div class="card card-custom full-row-card w-100">
