--- a/screen3.html
+++ b/screen3.html
@@ -111,7 +111,8 @@
                     <ol class="breadcrumb d-flex align-items-center">
                         <li class="breadcrumb-item"> <img src="./dist/img/pc.svg" alt=""> Wirtualna maszyna</li>
                         <li class="breadcrumb-item" aria-current="page">VC Foldery
-                            <span class="bg-primary-subtle py-1 px-3 rounded-3 text-primary">:hostname</span>
+                            <span class="py-1 px-3 rounded-3"
+                                style="color: #3B82F6; background-color:#DBEAFE ;">:hostname</span>
                             <span class="bg-warning-subtle py-1 px-3 rounded-3" style="color: #F59E0B;">Tryb
                                 edycji</span>
                         </li>
