--- a/screen2.html
+++ b/screen2.html
@@ -13,7 +13,6 @@
 
     <title>Screen2</title>
     <style>
-        /* Stylizacja dla zagnieżdżonych dropdownów */
         .dropdown-submenu {
             position: relative;
         }
@@ -32,6 +31,37 @@
 
         .dropdown-menu.show {
             align-items: flex-start;
+        }
+
+        input[type="checkbox"] {
+            display: none;
+        }
+
+        label {
+            position: relative;
+            display: inline-block;
+            padding: 0.65em;
+            border: 1px solid #D1D5DB;
+            border-radius: 6px;
+            cursor: pointer;
+        }
+
+        input[type="checkbox"]:checked {
+            opacity: 1;
+        }
+
+        label img {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            display: none;
+            width: 12px;
+            height: 12px;
+            transform: translate(-50%, -50%);
+        }
+
+        input[type="checkbox"]:checked+label img {
+            display: block;
         }
     </style>
 </head>
@@ -133,7 +163,8 @@
                     <ol class="breadcrumb d-flex align-items-center">
                         <li class="breadcrumb-item"> <img src="./dist/img/pc.svg" alt=""> Wirtualna maszyna</li>
                         <li class="breadcrumb-item" aria-current="page">VC Foldery
-                            <span class="bg-primary-subtle py-1 px-3 rounded-3">:hostname</span>
+                            <span class="py-1 px-3 rounded-3"
+                                style="color: #3B82F6; background-color:#DBEAFE ;">:hostname</span>
                         </li>
                     </ol>
                 </nav>
@@ -832,8 +863,9 @@
             </div>
             <div class="d-flex justify-content-between align-items-center panel my-5 py-4 px-4 text-center">
                 <div class="checkbox-container" data-index="all">
-                    <label>
-                        <input id="changeAllCheckbox" type="checkbox">
+                    <input id="changeAllCheckbox" type="checkbox">
+                    <label for="changeAllCheckbox">
+                        <img src="./dist/img/check-mark.svg" alt="">
                     </label>
                 </div>
                 <span class="d-flex gap-3">Ścieżka <img src="./dist/img/table-ar.svg" alt=""></span>
@@ -846,9 +878,9 @@
             <div class="panelTable d-flex flex-column justify-content-center rounded-3 mb-4 w-100" data-index="1">
                 <div class=" text-center py-4 px-4 d-flex align-items-center justify-content-between">
                     <div class="checkbox-container" data-index="1">
-                        <label class="custom-checkbox">
-                            <input class="checkbox" type="checkbox">
-                            <span class="checkmark"></span>
+                        <input id="input1" class="checkbox" type="checkbox">
+                        <label for="input1">
+                            <img src="./dist/img/check-mark.svg" alt="">
                         </label>
                     </div>
                     <spam>PATH/path/path</spam>
@@ -896,9 +928,9 @@
             <div class="panelTable d-flex flex-column justify-content-center rounded-3 mb-4 w-100" data-index="2">
                 <div class=" text-center py-4 px-4 d-flex align-items-center justify-content-between">
                     <div class="checkbox-container" data-index="2">
-                        <label class="custom-checkbox">
-                            <input class="checkbox" type="checkbox">
-                            <span class="checkmark"></span>
+                        <input id="input2" class="checkbox" type="checkbox">
+                        <label for="input2">
+                            <img src="./dist/img/check-mark.svg" alt="">
                         </label>
                     </div>
                     <spam>PATH/path/path</spam>
@@ -946,9 +978,9 @@
             <div class="panelTable d-flex flex-column justify-content-center rounded-3 mb-4 w-100" data-index="3">
                 <div class=" text-center py-4 px-4 d-flex align-items-center justify-content-between">
                     <div class="checkbox-container" data-index="3">
-                        <label class="custom-checkbox">
-                            <input class="checkbox" type="checkbox">
-                            <span class="checkmark"></span>
+                        <input id="input3" class="checkbox" type="checkbox">
+                        <label for="input3">
+                            <img src="./dist/img/check-mark.svg" alt="">
                         </label>
                     </div>
                     <spam>PATH/path/path</spam>
@@ -996,9 +1028,9 @@
             <div class="panelTable d-flex flex-column justify-content-center rounded-3 mb-4 w-100" data-index="4">
                 <div class=" text-center py-4 px-4 d-flex align-items-center justify-content-between">
                     <div class="checkbox-container" data-index="4">
-                        <label class="custom-checkbox">
-                            <input class="checkbox" type="checkbox">
-                            <span class="checkmark"></span>
+                        <input id="input4" class="checkbox" type="checkbox">
+                        <label for="input4">
+                            <img src="./dist/img/check-mark.svg" alt="">
                         </label>
                     </div>
                     <spam>PATH/path/path</spam>
@@ -1046,9 +1078,9 @@
             <div class="panelTable d-flex flex-column justify-content-center rounded-3 mb-4 w-100" data-index="5">
                 <div class=" text-center py-4 px-4 d-flex align-items-center justify-content-between">
                     <div class="checkbox-container" data-index="5">
-                        <label class="custom-checkbox">
-                            <input class="checkbox" type="checkbox">
-                            <span class="checkmark"></span>
+                        <input id="input5" class="checkbox" type="checkbox">
+                        <label for="input5">
+                            <img src="./dist/img/check-mark.svg" alt="">
                         </label>
                     </div>
                     <spam>PATH/path/path</spam>
